Fix loan chaos data field alignments.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -917,7 +917,8 @@ div.panel-pane div.node.boxed {
   display: inline-block;
 }
 
-.pane-chaos-data .field-label-inline .field-label {
+.pane-chaos-data .field-label-inline .field-label,
+.loan-chaos-data label {
   width: 288px;
 }
 
